include/abg-tools-utils.h
@@ -115,6 +115,8 @@ enum file_type
   FILE_TYPE_RPM,
   /// An SRPM (.src.rpm) file
   FILE_TYPE_SRPM,
+  /// An DEB (.deb) binary file
+  FILE_TYPE_DEB,
 };
 
 /// Exit status for abidiff and abicompat tools.
