tools/abidiff.cc
@@ -551,6 +551,8 @@ main(int argc, char* argv[])
           break;
         case abigail::tools_utils::FILE_TYPE_SRPM:
           break;
+        case abigail::tools_utils::FILE_TYPE_DEB:
+          break;
         }
 
       switch (t2_type)
@@ -582,6 +584,8 @@ main(int argc, char* argv[])
         case abigail::tools_utils::FILE_TYPE_RPM:
           break;
         case abigail::tools_utils::FILE_TYPE_SRPM:
+          break;
+        case abigail::tools_utils::FILE_TYPE_DEB:
           break;
         }
 
