tools/abilint.cc
@@ -227,6 +227,8 @@ main(int argc, char* argv[])
           break;
         case abigail::tools_utils::FILE_TYPE_SRPM:
           break;
+        case abigail::tools_utils::FILE_TYPE_DEB:
+          break;
         }
 
       if (!tu && !corp)
